# knowledge-graph-agent

./: .gitignore  README.md  contract-review.md  employee-agent.md  kyc-agent.md
code/aura-agent-mcp/: .env.example  aura-agent-mcp-server.py  pyproject.toml
code/contract-agent-eval/: .env.example  README.md  agent-eval-trace.py  aura-agent-evaluation-dataset.json  process_response.py  pyproject.toml
code/contract-review-mcp/: .env.example  .gitignore  README.md  contract_review_server.py  pyproject.toml
code/cuad-to-knowledge-graph/: .env.example  .gitignore  AgreementSchema.py  CREATE_GRAPH.cypher  README.md  contract-to-json.py  contract_extraction_prompt.txt  generate_embeddings.py  json-to-graph.py  pyproject.toml
dump/: contract-data.backup  employee-data.backup  kyc-data.backup
